--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,52 @@
-# name: CI/CD for NestJS with Vercel
+name: CI/CD for NestJS with Vercel
 
 # env:
 #   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
 #   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Sao chép mã nguồn
-#         uses: actions/checkout@v2
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sao chép mã nguồn
+        uses: actions/checkout@v2
 
-#       - name: Cài đặt môi trường Node.js
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: 20.x
+      - name: Cài đặt môi trường Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.x
 
-#       - name: Cài đặt phụ thuộc
-#         run: npm install
+      - name: Cài đặt phụ thuộc
+        run: npm install
 
-#       - name: Xây dựng dự án
-#         run: npm run build
+      - name: Xây dựng dự án
+        run: npm run build
 
-#   test:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#       - name: Sao chép mã nguồn
-#         uses: actions/checkout@v2
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Sao chép mã nguồn
+        uses: actions/checkout@v2
 
-#       - name: Cài đặt môi trường Node.js
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: 20.x
+      - name: Cài đặt môi trường Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.x
 
-#       - name: Cài đặt phụ thuộc
-#         run: npm install
+      - name: Cài đặt phụ thuộc
+        run: npm install
 
-#       - name: Kiểm thử đơn vị
-#         run: npm run test
+      - name: Kiểm thử đơn vị
+        run: npm run test
 
-#       - name: Kiểm thử tích hợp
-#         run: npm run test:e2e
+      - name: Kiểm thử tích hợp
+        run: npm run test:e2e
 #   deploy:
 #     runs-on: ubuntu-latest
 #     needs: test
